  * summarize sets of changes - don't reproduce every git log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)

------------------------------------------------------------------------------
??/??/2019 giacomofiorin

  * 0.5.0

  Enhancements
  
  * Allow parsing DX files by NAMD's GridForces module (new typequote keyword, #58)

  Fixes

  * Allow parsing DX files by Pymol's buggy floating-point parser (#58)

04/06/2019 rathann, tluchko, orbeckst

  * 0.4.1

  Fixes

  * Fixed testsuite on 32bit architectures (issue #44)
  * Improved DX parsing speed (#2)
  * Fixed reading in DX files containing scientific notation (PR #52)
  * Added missing floordivision to Grid (PR #53)
  * fix test on ARM (#51)
  * fix incorrect reading of ncstart and nrstart in CCP4 (#57)
  * fix that arithemtical operations broke inheritance (#56)
  * fix so that subclasses of ndarray are retained on input (#56)
  * fix Grid.save(filename) so that it respects the user's filename (#64)
  * fix grid equality test g == h (relied on old numpy behavior)

  Changes (do not affect user)

  * use pytest as testing framework (#49)
  * use truedivision consistently throughout the package and the tests (PR #52)
  * installation now requires scipy (it is much easier to install than it
    used to)

01/17/2017 orbeckst, kain88-de

  * 0.4.0

  Changes/Enhancements

  * Type of DX arrays is now set based on the numpy array dtype or can
    be manually set by the user to increase interoperability with
    tools such as PyMOL (issue #35)

05/13/2016 kain88-de

  * 0.3.3

  Changes

  * Included tempdir module directly

12/11/2015 orbeckst

  * 0.3.2

  Enhancements

  Changes

  * can import without scipy present (scipy.ndimage will only be used
    on demand when interpolation of a Grid is requested) (issue #25)

  Fixes

